overflow vh fix

--- a/style.css
+++ b/style.css
@@ -1,19 +1,16 @@
     html {
-        height: auto;
-background: rgb(221,239,187) ;
-background: linear-gradient(328deg, rgba(221,239,187,1) 0%, rgba(247,238,255,1) 90%);
+        height: 100%;
     }
 
 body{
-	       height: 100vh;
-	         height: calc(100vh - var(--vh-offset, 0px));
-        background-attachment: fixed;
-        background-size: cover;
+	       height: 100%;
+background: rgb(221,239,187) ;
+background: linear-gradient(328deg, rgba(221,239,187,1) 0%, rgba(247,238,255,1) 90%);
 	width: 100vw;
 color: #232b2b;
 font-size: 13px;
 margin: 0 !important;
-
+overflow:hidden;
 	}
 
 /*.background-color{
@@ -74,7 +71,6 @@ a:hover{
 @media only screen and (max-width: 700px) {
 
 	body{
-		overflow:hidden;
 	}
 
 .background-color{
